[package]
name = "syncrab"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.17.0", features = ["rt-multi-thread", "macros", "fs"] }
color-eyre = "0.6.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.5"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
synapse-admin-api = { version = "0.3", features = ["client"] }
url = { version = "2.2", features = ["serde"] }
once_cell = "1.10.0"

[dependencies.matrix-sdk]
version = "0.4.1"
git = "https://github.com/matrix-org/matrix-rust-sdk"
rev = "503f4d73a0ee8af3816ad82dfe85211126ef3ee6"
default-features = false
features = [
  "encryption",
  "sled_cryptostore",
  "sled_state_store",
  "eyre",
  "rustls-tls",
]
